--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "embla-carousel-react": "^8.0.0-rc23",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
