--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-three/drei": "^9.101.0",
+    "@react-three/fiber": "^8.15.19",
     "@stitches/react": "^1.2.8",
+    "@types/three": "^0.162.0",
     "embla-carousel-react": "^8.0.0-rc23",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
