--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "name": "tiny-hippos",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "export": "next build",
+    "clean": "rm -rf .next out node_modules",
+    "lint": "next lint"
   },
   "dependencies": {
     "@react-three/drei": "^9.101.0",
@@ -12,7 +16,7 @@
     "@stitches/react": "^1.2.8",
     "@types/three": "^0.162.0",
     "embla-carousel-react": "^8.0.0-rc23",
-    "next": "latest",
+    "next": "14.2.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "^0.162.0"
@@ -24,5 +28,9 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
