--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "export": "next build",
     "clean": "rm -rf .next out node_modules",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview": "npm run build && wrangler dev",
+    "deploy": "npm run build && npx opennextjs-cloudflare && wrangler deploy",
+    "cf-build": "npx opennextjs-cloudflare"
   },
   "dependencies": {
     "@react-three/drei": "^9.101.0",
